force-app/main/default/objects/MUSW__Comment__c/fields/AVO_Compliance__c.field-meta.xml
<CustomField>
    <fullName>AVO_Compliance__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Compliance</label>
    <referenceTo>AVO_Compliance__c</referenceTo>
    <relationshipLabel>Comments</relationshipLabel>
    <relationshipName>Comments</relationshipName>
    <type>Lookup</type>
</CustomField>