force-app/main/default/objects/MUSW__Comment__c/fields/AVO_Meter_Transaction__c.field-meta.xml
<CustomField>
    <fullName>AVO_Meter_Transaction__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Meter Transaction</label>
    <referenceTo>AVO_Meter_Transaction__c</referenceTo>
    <relationshipLabel>Comments</relationshipLabel>
    <relationshipName>Comments</relationshipName>
    <type>Lookup</type>
</CustomField>