force-app/main/default/objects/MUSW__Comment__c/fields/AVO_Permit__c.field-meta.xml
<CustomField>
    <fullName>AVO_Permit__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Permit</label>
    <referenceTo>MUSW__Permit2__c</referenceTo>
    <relationshipLabel>Comments</relationshipLabel>
    <relationshipName>Comments</relationshipName>
    <type>Lookup</type>
</CustomField>