force-app/main/default/objects/MUSW__Comment__c/fields/MUSW__Author__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Author__c</fullName>
    <label>Author</label>
    <length>255</length>
    <type>Text</type>
</CustomField>