force-app/main/default/objects/MUSW__Comment__c/fields/MUSW__BG_Bluebeam_CommentId__c.field-meta.xml
<CustomField>
    <fullName>MUSW__BG_Bluebeam_CommentId__c</fullName>
    <description>Track unique comments created in Bluebeam tools</description>
    <externalId>true</externalId>
    <inlineHelpText>Unique id of a Bluebeam Comment</inlineHelpText>
    <label>Bluebeam CommentId</label>
    <length>100</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>