force-app/main/default/objects/MUSW__Comment__c/fields/MUSW__BG_Description__c.field-meta.xml
<CustomField>
    <fullName>MUSW__BG_Description__c</fullName>
    <label>Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>