force-app/main/default/objects/MUSW__Comment__c/fields/MUSW__BG_File_Name__c.field-meta.xml
<CustomField>
    <fullName>MUSW__BG_File_Name__c</fullName>
    <description>Name of the file on Bluebeam</description>
    <label>File Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>