force-app/main/default/objects/MUSW__Comment__c/fields/MUSW__BG_Miletstone__c.field-meta.xml
<CustomField>
    <fullName>MUSW__BG_Miletstone__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field is deprecated.</description>
    <label>Milestone (Deprecated)</label>
    <referenceTo>MUSW__Milestone__c</referenceTo>
    <relationshipLabel>Comments</relationshipLabel>
    <relationshipName>Comments</relationshipName>
    <type>Lookup</type>
</CustomField>