force-app/main/default/objects/MUSW__Comment__c/fields/MUSW__BG_Page__c.field-meta.xml
<CustomField>
    <fullName>MUSW__BG_Page__c</fullName>
    <description>Page number that this comment/markup appears on.</description>
    <label>Page</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>