force-app/main/default/objects/MUSW__Comment__c/fields/MUSW__BG_Status__c.field-meta.xml
<CustomField>
    <fullName>MUSW__BG_Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>