force-app/main/default/objects/MUSW__Comment__c/fields/MUSW__BG_Type__c.field-meta.xml
<CustomField>
    <fullName>MUSW__BG_Type__c</fullName>
    <description>Type of markup on Bluebeam</description>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Liine</fullName>
            </value>
            <value>
                <fullName>Arrow</fullName>
            </value>
            <value>
                <fullName>Stamp</fullName>
            </value>
            <value>
                <fullName>Text Box</fullName>
            </value>
            <value>
                <fullName>Typewriter</fullName>
            </value>
            <value>
                <fullName>Note</fullName>
            </value>
            <value>
                <fullName>Pen</fullName>
            </value>
            <value>
                <fullName>Highlight</fullName>
            </value>
            <value>
                <fullName>Callout</fullName>
            </value>
            <value>
                <fullName>Rectangle</fullName>
            </value>
            <value>
                <fullName>Ellipse</fullName>
            </value>
            <value>
                <fullName>Polygon</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>