force-app/main/default/objects/MUSW__Comment__c/fields/MUSW__Issued_Number__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Issued_Number__c</fullName>
    <label>Issued Number</label>
    <length>25</length>
    <type>Text</type>
</CustomField>