force-app/main/default/objects/MUSW__Comment__c/fields/MUSW__Milestone__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Milestone__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Milestone</label>
    <referenceTo>MUSW__Milestone__c</referenceTo>
    <relationshipLabel>Comments (Milestone)</relationshipLabel>
    <relationshipName>Comments_Milestone</relationshipName>
    <type>Lookup</type>
</CustomField>